--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^2.1.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -44,8 +44,8 @@
     ]
   },
   "devDependencies": {
+    "cssnano": "^5.1.15",
     "gh-pages": "^5.0.0",
-    "cssnano": "^4.1.10",
     "nakds": "^2.4.2",
     "postcss": "^8.4.6",
     "postcss-cli": "^9.1.0",
